got nodes setup

--- a/src/posts/2019/April/01-April Fools Day/index.mdx
+++ b/src/posts/2019/April/01-April Fools Day/index.mdx
@@ -4,10 +4,10 @@ date: 2019-03-18 16:04:34
 slug: "/april-fools-day/"
 banner: '/images/gatsby-astronaut.png'
 published: true
-categories: ["Blog Inspiration"]
+# categories: ["Blog Inspiration"]
 tags: ["Handwriting", "Learning to write", "Blog"]
 keywords: ['blog']
-description: "Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum."
+# description: "Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum."
 ---
 
 This is my first post on my new fake blog! How exciting!
